<resources>
    <string name="app_name">Tautulli Remote</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name='activity'>Activity</string>
    <string name="users">Users</string>
    <string name="recently_added">Recently Added</string>
    <string name="history">History</string>
    <string name="graphs">Graphs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>

    <string name="app_about_description">Tautulli Remote connects to your existing Tautulli server for easy mobile access. Just enter your server address and API key to connect and view current activity, server stats, and more.</string>

    <string name="server_settings_title">Server Settings</string>
    <string name="server_settings_qr_title">Scan QR Code</string>
    <string name="server_settings_qr_summary">Scan the QR code in the Tautulli settings to automatically link the app with the server (requires Tautulli beta)</string>
    <string name="server_settings_ssl_title">HTTPS/TLS</string>
    <string name="server_settings_ssl_summary">Enable if you use HTTPS to communicate with Tautulli.</string>
    <string name="server_settings_address_title">Hostname or IP Address</string>
    <string name="server_settings_address_summary">Hostname or an IP address such as plexpy.example.com or 192.168.1.1</string>
    <string name="server_settings_port_title">Port</string>
    <string name="server_settings_port_summary">Port your web server is bound to.</string>
    <string name="server_settings_path_title">HTTP Root</string>
    <string name="server_settings_path_summary">The base URL of the web server. Used for reverse proxies.</string>
    <string name="server_settings_apikey_title">Device Token</string>
    <string name="server_settings_apikey_summary">Manually enter the Device Token</string>

    <string name="app_settings_title">App Settings</string>
    <string name="app_settings_refresh_title">Activity Refresh Interval</string>
    <string name="app_settings_refresh_summary">Activity page refresh interval in seconds (blank=disabled)</string>
    <string name="app_settings_back_title">Double Tap to Exit</string>
    <string name="app_settings_back_summary">Tap back button twice to exit</string>

    <string name="CheckingActivity">Checking for activity…</string>

    <string-array name="StatisticsTabs">
        <item>Most Watched TV</item>
        <item>Most Popular TV</item>
        <item>Most Watched Movie</item>
        <item>Most Popular Movie</item>
        <item>Most Active User</item>
        <item>Most Active Platform</item>
        <!--<item>Last Watched</item>-->
    </string-array>
    <string name="title_activity_library_statistics">LibraryStatisticsActivity</string>
    <string name="libraries">Libraries</string>

    <string name="eta">ETA: %s</string>


    <!-- Error Messages -->

    <string name="InvalidServer">Unable to connect to Tautulli. Check server configuration or network connection.</string>
    <string name="InvalidTimeoutServer">Connection to Tautulli failed: Possible invalid server settings</string>
    <string name="NetworkUnreachable">Network is unreachable</string>
    <string name="ConnectionRefused">Invalid server port</string>
    <string name="InvalidAPIKey">Invalid API key</string>
    <string name="NoActivity">Nothing is currently being played</string>
    <string name="PlexError">Failed to authenticate with either Tautulli or Plex</string>
    <string name="FormatError">Incorrect server address format</string>
    <string name="SSLError">HTTPS in enabled but port is set to 80</string>
    <string name="UnexpectedError">Unexpected error</string>
    <string name="search_text">Search</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="bandwidth_dialog">Streaming Brain Estimate (Required Bandwidth)</string>
</resources>
