<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/server_settings_title">

        <EditTextPreference
            android:key="server_settings_address"
            android:title="@string/server_settings_address_title"
            android:dialogTitle="@string/server_settings_address_title"
            android:summary="enter full url including http, port and path" />

        <EditTextPreference
            android:key="server_settings_apikey"
            android:title="@string/server_settings_apikey_title"
            android:dialogTitle="@string/server_settings_apikey_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_settings_title">

        <EditTextPreference
            android:numeric="integer"
            android:key="app_settings_refresh"
            android:title="@string/app_settings_refresh_title"
            android:dialogTitle="@string/app_settings_refresh_title"
            android:summary="Activity page refresh interval (in seconds)" />

    </PreferenceCategory>
</PreferenceScreen>